--- a/css/latex.css
+++ b/css/latex.css
@@ -25,6 +25,11 @@ h1, h2, h3, h4, h5, h6 {
 
 a, a:visited {
 	color: #a00;
+	text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 ul {
